# pybotters-wrapper

./: .flake8  Makefile  README.md  pyproject.toml
.github/workflows/: pytest.yml
pybotters_wrapper/: __init__.py  _apis.py  _typedefs.py  exceptions.py  factory.py
pybotters_wrapper/binance/: __init__.py  api.py  listenkey_fetcher.py  normalized_store_builder.py  plugins.py  price_size_precision_fetcher.py  resources.py  socket.py  store.py  websocket_request_customizer.py
pybotters_wrapper/bitbank/: __init__.py  api.py  base_url_attacher.py  normalized_store_builder.py  price_size_precision_fetcher.py  socket.py  store.py  websocket_channels.py  wrapper_factory.py
pybotters_wrapper/bitflyer/: __init__.py  api.py  normalized_store_builder.py  plugins.py  price_size_precision_fetcher.py  socket.py  store.py  websocket_channels.py  wrapper_factory.py
pybotters_wrapper/bitget/: __init__.py  api.py  normalized_store_builder.py  plugins.py  price_size_precision_fetcher.py  socket.py  store.py  websocket_channels.py  wrapper_factory.py
pybotters_wrapper/bybit/: __init__.py  api.py  normalized_store_builder.py  plugins.py  price_size_precision_fetcher.py  socket.py  (+2 more)
tests/: conftest.py  test_api_client.py  test_api_client_builder.py  test_binancecoinm_exchange_property.py  test_binancecoinm_fetch_api_orderbook.py  test_binancecoinm_fetch_api_orders.py  test_binancecoinm_fetch_api_positions.py  test_binancecoinm_fetch_api_ticker.py  test_binancecoinm_normalized_store_execution.py  test_binancecoinm_normalized_store_order.py  test_binancecoinm_normalized_store_orderbook.py  test_binancecoinm_normalized_store_position.py  test_binancecoinm_normalized_store_ticker.py  test_binancecoinm_normalized_store_trades.py  test_binancecoinm_order_api_cancel.py  test_binancecoinm_order_api_limit.py  test_binancecoinm_order_api_market.py  test_binancecoinm_order_api_stop_limit.py  test_binancecoinm_order_api_stop_market.py  test_binancecoinm_store_initializer.py  test_binancecoinm_websocket_request_builder.py  test_binanceusdsm_exchange_property.py  test_binanceusdsm_fetch_api_orderbook.py  test_binanceusdsm_fetch_api_orders.py  test_binanceusdsm_fetch_api_positions.py  test_binanceusdsm_fetch_api_ticker.py  test_binanceusdsm_normalized_store_execution.py  test_binanceusdsm_normalized_store_order.py  test_binanceusdsm_normalized_store_orderbook.py  test_binanceusdsm_normalized_store_position.py  test_binanceusdsm_normalized_store_ticker.py  test_binanceusdsm_normalized_store_trades.py  test_binanceusdsm_order_api_cancel.py  test_binanceusdsm_order_api_limit.py  test_binanceusdsm_order_api_market.py  test_binanceusdsm_order_api_stop_limit.py  test_binanceusdsm_order_api_stop_market.py  test_binanceusdsm_store_initializer.py  test_binanceusdsm_websocket_request_builder.py  test_create_methods.py  (+11 more)
(+566 files in other folders)
