[tool.poetry]
name = "pybotters_wrapper"
version = "0.1.0"
description = ""
authors = ["ko0hi <ko0hi.0304@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"
pybotters = "0.15.0"
numpy = "^1.23.3"
pandas = "^1.5.0"
loguru = "^0.6.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
