[tool.poetry]
name = "pybotters_wrapper"
version = "0.1.0"
description = ""
authors = ["ko0hi <ko0hi.0304@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"
pybotters = "0.15.0"
numpy = "^1.23.3"
pandas = "^1.5.0"
loguru = "^0.6.0"
requests = "^2.28.1"
isort = "^5.12.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pytest-mock = "^3.10.0"
aioresponses = "^0.7.4"
flake8 = "^6.0.0"
mypy = "^1.3.0"
mypy-extensions = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 2
include_trailing_comma = false
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '__pycache__,\.egg-info,\.git,\.mypy_cache,\.tox,\.venv,\.direnv'

[tool.mypy]
strict = false
pretty = true
ignore_missing_imports = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
follow_imports = "silent"