[tool.poetry]
name = "pybotters_wrapper"
version = "0.1.0"
description = ""
authors = ["ko0hi <ko0hi.0304@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<4.0"
pybotters = "^1.0.0"
loguru = "^0.7.2"
requests = "^2.31.0"
isort = "^5.12.0"
pandas = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pytest-mock = "^3.10.0"
aioresponses = "^0.7.4"
flake8 = "^6.0.0"
mypy = "^1.3.0"
mypy-extensions = "^1.0.0"
types-requests = "^2.31.0.1"
pyproject-flake8 = "^6.0.0.post1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
ignore = 'E203,W291,W292,W293,W391,W503'
exclude = '\.git,__pycache__,\.venv,\.eggs,\.mypy_cache'
per-file-ignores = '__init__.py:F401,F403,F405'

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '__pycache__,\.egg-info,\.git,\.mypy_cache,\.tox,\.venv,\.direnv'

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
